<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_one">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/app_Name"
        android:src="@drawable/multidots_1" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.v4.view.ViewPager
            android:id="@+id/myfivepanelpager"
            android:layout_width="fill_parent"
            android:layout_height="200dp"></android.support.v4.view.ViewPager>
    </LinearLayout>

    <TextView
        android:id="@+id/multidots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/con_mo_container"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/multidots"
        android:textColor="@color/font_color"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/con_mo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/md_corporate"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_action_call" />

            <TextView
                android:id="@+id/call_md"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/Md_Number"
                android:textColor="@color/font_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_action_email" />

            <TextView
                android:id="@+id/inqry_md_mail_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/contact_us_email"
                android:textColor="@color/font_color" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/md_corporate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer_layout"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/footer" />

    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="3dp">

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/twitter" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/facebookl" />

        <!-- <ImageView -->
        <!-- android:id="@+id/skyp" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginLeft="5dp" -->
        <!-- android:contentDescription="@string/app_name" -->
        <!-- android:src="@drawable/skyp" /> -->


        <!-- <ImageView -->
        <!-- android:id="@+id/linked_in" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginLeft="5dp" -->
        <!-- android:contentDescription="@string/app_name" -->
        <!-- android:src="@drawable/linked_in" /> -->

        <ImageView
            android:id="@+id/google_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/google_plus" />

        <!-- <ImageView -->
        <!-- android:id="@+id/flickr" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginLeft="5dp" -->
        <!-- android:contentDescription="@string/app_name" -->
        <!-- android:src="@drawable/flickr" /> -->

        <ImageView
            android:id="@+id/you_tube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/you_tube" />

        <ImageView
            android:id="@+id/pinterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pinterest" />
    </LinearLayout>

</RelativeLayout>